Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -227,21 +227,6 @@
         "deep": []
     },
     {
-        "id": "8.00c",
-        "title": "Interactive Warm-Up: Class Brainstorm",
-        "bullets": [
-            "<b>Think (30 seconds):</b> Silently consider the question posed in the Word Cloud activity below.",
-            "<b>Pair (1-2 minutes):</b> Turn to a neighbor and discuss your ideas.",
-            "<b>Share:</b> We will ask a few pairs to share with the class. Add your key words to the cloud!"
-        ],
-        "full": "",
-        "deep": [],
-        "wordcloud": {
-            "title": "What is 1940s & 50s Pop Music?",
-            "prompt": "Based on music from old movies or that your grandparents listen to, what one word comes to mind? Follow the Think-Pair-Share instructions, then add your word to the cloud."
-        }
-    },
-    {
         "id": "8.01",
         "title": "8.01 Introduction",
         "bullets": [
@@ -249,7 +234,6 @@
             "These songs were characterized by genteel language, memorable melodies, and harmonies suitable for various arrangements.",
             "A single popular tune, like Hoagy Carmichael's \\\"Stardust,\\\" could become a valuable copyrighted merchandise, earning millions.",
             "During the 1930s, solo singers, many of whom started with big bands like Duke Ellington's and Benny Goodman's, became increasingly important and eventually became star attractions.",
-            "Many singers in the 1940s and early 1950s began their careers singing with a big band before branching out on their own.",
             "These performers were typically singers, not songwriters, who performed their own interpretations of standard repertory from composers like the Gershwins and Cole Porter."
         ],
         "full": "In the 1940s and 1950s, a specific style of pop music dominated the mainstream. Originating from the stage musicals of the 1920s, these songs were known for their refined lyrics and unforgettable melodies. This created a high demand for new, artistic pop songs for singers, dance bands, movies, and radio shows. As audiences fell in love with the vocalists featured in big bands, singers like Ella Fitzgerald and Bing Crosby became the main attractions, building entire careers on their unique interpretations of popular songs. The singers of this era were celebrated for their performance and interpretation, rather than for writing their own music, and they represent the heart of popular music during the World War II era.",
@@ -259,7 +243,12 @@
                 "summary": "A typical scene from the era of traditional pop.",
                 "image": "https://i.imgur.com/nhDA8cG.jpeg"
             }
-        ]
+        ],
+        "poll": {
+            "q": "How did many popular singers in the 1940s begin their careers?",
+            "choices": ["Acting in Hollywood films", "Starring in Broadway musicals", "Singing with a big band", "Attending a conservatory"],
+            "answer": 2
+        }
     },
     {
         "id": "8.02",
@@ -277,7 +266,7 @@
                 "image": "https://i.imgur.com/mNLbQsL.jpeg",
                 "modalHTML": "<p>\\\"My whole life, my whole soul, my whole spirit is to blow that horn.\\\"</p>",
                 "media": [
-                    {"label": "Listen: 'Dream a Little Dream of Me'", "href": "https://www.youtube.com/watch?v=ajwI2S2_L2U"}
+                    {"label": "Watch: Bio Video", "href": "https://www.youtube.com/embed/sIILBeUrYLk"}
                 ]
             }
         ]
@@ -312,12 +301,7 @@
                     {"label": "Read More", "href": "https://www.biography.com/musicians/frank-sinatra"}
                 ]
             }
-        ],
-        "poll": {
-            "q": "Journalists coined which term to describe the effect Frank Sinatra had on his audience?",
-            "choices": ["Crooner", "Swooner", "Enchanter", "Belter"],
-            "answer": 1
-        }
+        ]
     },
     {
         "id": "8.04",
@@ -356,6 +340,12 @@
             {
                 "title": "Tony Bennett (1926-2023)",
                 "image": "https://i.imgur.com/8Ezom8y.jpeg",
+                 "bullets": [
+                    "Discovered by comedian Bob Hope.",
+                    "Signed with Columbia Records and had a string of hits.",
+                    "Signature song is \"I Left My Heart in San Francisco\" (1962)."
+                ],
+                "modalHTML": "<p>Tony Bennett enjoyed one of the longest careers in American popular music, known for his smooth phrasing and dedication to the Great American Songbook.</p>",
                 "media": [
                     {"label": "Watch: 'I Left My Heart in San Francisco'", "href": "https://www.youtube.com/embed/r6DUwMnDxEs"},
                     {"label": "Watch: Short Bio Video", "href": "https://www.youtube.com/embed/Vmay5lba4zU"},
@@ -411,12 +401,22 @@
                 "title": "Doris Day (1922-2019)",
                 "image": "https://i.imgur.com/BgJctBF.jpeg",
                 "modalHTML": "<p>\\\"When I recorded for Columbia, I could usually do anything in one take...I would invariably want to use the first take because that would be the one that was spontaneous and fresh.\\\"</p>",
+                "bullets": [
+                    "Began as a big band singer with Les Brown.",
+                    "Starred in 39 feature films.",
+                    "Iconic song \"Que Sera, Sera\" was from a Hitchcock film."
+                ],
                 "media": [
                     {"label": "Watch: 'Que Sera, Sera'", "href": "https://www.youtube.com/embed/IKumQCTNJOY"},
                     {"label": "Watch: Bio Video", "href": "https://www.youtube.com/embed/Yd2LsJcFfvE"}
                 ]
             }
-        ]
+        ],
+        "poll": {
+            "q": "True or False: Doris Day was also a prolific film actress.",
+            "choices": ["True", "False"],
+            "answer": 0
+        }
     },
     {
         "id": "8.08",
@@ -475,7 +475,12 @@
                     {"label": "Watch: Mini Bio of the Sisters", "href": "https://www.youtube.com/embed/WPboDQWR1Gw"}
                 ]
             }
-        ]
+        ],
+        "poll": {
+            "q": "Which singer was confined to a wheelchair due to contracting polio as a child?",
+            "choices": ["Doris Day", "Connee Boswell", "Patti Page", "Rosemary Clooney"],
+            "answer": 1
+        }
     },
     {
         "id": "8.10",
@@ -491,6 +496,11 @@
             {
                 "title": "The Andrews Sisters",
                 "image": "https://i.imgur.com/vyOOL8x.jpeg",
+                "bullets": [
+                    "Most popular female trio of the 1940s.",
+                    "Became favorites of military forces in WWII.",
+                    "Famous for 'boogie woogie' style songs."
+                ],
                 "media": [
                     {"label": "Watch: 'Bei Mir Bist Du Schön'", "href": "https://www.youtube.com/embed/bU7mSf5ncbk"},
                     {"label": "Watch: 'Boogie Woogie Bugle Boy'", "href": "https://www.youtube.com/embed/8of3uhG1tCI"}
@@ -512,11 +522,21 @@
             {
                 "title": "The Golden Gate Quartet",
                 "image": "https://i.imgur.com/0dsZ784.jpeg",
+                 "bullets": [
+                    "Successful Black gospel-pop group.",
+                    "Performed at Carnegie Hall in 1938.",
+                    "Influenced later Motown groups."
+                ],
                 "media": [
                     {"label": "Watch: 'Mockingbird'", "href": "https://www.youtube.com/embed/q4W8Uw00hs8"}
                 ]
             }
-        ]
+        ],
+        "poll": {
+            "q": "The Golden Gate Quartet sang an early version of which musical style?",
+            "choices": ["Bebop", "Gospel", "Doo-wop", "Soul"],
+            "answer": 2
+        }
     },
     {
         "id": "8.12",
@@ -533,13 +553,23 @@
             {
                 "title": "The Ink Spots",
                 "image": "https://i.imgur.com/sLfbnJd.jpeg",
+                 "bullets": [
+                    "Formed in 1934.",
+                    "Signature style included high falsetto lead and a spoken baritone bridge.",
+                    "Breakthrough hit was \"If I Didn't Care\" (1939)."
+                ],
                 "media": [
                     {"label": "Watch: 'If I Didn't Care'", "href": "https://www.youtube.com/embed/YE_qg8JSLk4"},
                     {"label": "Watch: 'We Three'", "href": "https://www.youtube.com/embed/YqsTeLR1aUw"},
                     {"label": "Watch: 'Into Each Life Some Rain Must Fall'", "href": "https://www.youtube.com/embed/PPac8VKU6zc"}
                 ]
             }
-        ]
+        ],
+         "poll": {
+            "q": "True or False: The Ink Spots and the Golden Gate Quartet were racially integrated groups.",
+            "choices": ["True", "False"],
+            "answer": 1
+        }
     },
     {
         "id": "8.13",
@@ -592,11 +622,6 @@
         "answer": 1
     },
     {
-        "q": "Which of the following artists is NOT listed in the text as having sung on the show Your Hit Parade?",
-        "choices": ["Perry Como", "Frank Sinatra", "Dorothy Collins", "Johnny Mercer"],
-        "answer": 0
-    },
-    {
         "q": "What year did Frank Sinatra's performance cause a riot in Times Square?",
         "choices": ["1944", "1934", "1954", "1924"],
         "answer": 0
@@ -617,19 +642,9 @@
         "answer": 0
     },
     {
-        "q": "How did many popular singers in the 1940s begin their careers?",
-        "choices": ["Acting in Hollywood films", "Starring in Broadway musicals", "Singing with a big band", "Attending a conservatory"],
-        "answer": 2
-    },
-    {
-        "q": "Which singer was confined to a wheelchair due to contracting polio as a child?",
-        "choices": ["Doris Day", "Connee Boswell", "Patti Page", "Rosemary Clooney"],
-        "answer": 1
-    },
-    {
-        "q": "The Golden Gate Quartet sang an early version of which musical style?",
-        "choices": ["bebop", "gospel", "doo-wop", "soul"],
-        "answer": 2
+        "q": "Which of the following artists is NOT listed in the text as having sung on the show Your Hit Parade?",
+        "choices": ["Perry Como", "Frank Sinatra", "Dorothy Collins", "Johnny Mercer"],
+        "answer": 0
     },
     {
         "q": "True or False: \"Boogie Woogie Bugle Boy of Company B\" was recorded by the Boswell Sisters.",
@@ -637,22 +652,7 @@
         "answer": 1
     },
     {
-        "q": "True or False: The Ink Spots and the Golden Gate Quartet were racially integrated groups.",
-        "choices": ["True", "False"],
-        "answer": 1
-    },
-    {
         "q": "True or False: Perry Como and Rosemary Clooney both had their own television shows.",
-        "choices": ["True", "False"],
-        "answer": 0
-    },
-    {
-        "q": "True or False: Frank Sinatra began his career by singing with Count Basie's orchestra.",
-        "choices": ["True", "False"],
-        "answer": 1
-    },
-    {
-        "q": "True or False: Doris Day was also a prolific film actress.",
         "choices": ["True", "False"],
         "answer": 0
     },
@@ -1069,11 +1069,7 @@ function startApp() {
   function deepListHTML(sectionIdx, deep){
     if(!deep || !deep.length) return '';
     const items = deep.map((d,di)=>{
-      if (d.image && !d.bullets && !d.modalHTML) {
-          // Special case for a simple image-only deep dive
-          return `<div style="text-align: center; margin: 1rem 0;"><img alt="${d.title}" src="${d.image}" style="max-width: 100%; height: auto; border-radius: .4rem;"></div>`;
-      }
-      if (d.modalHTML && !d.bullets?.length) {
+      if (d.modalHTML && !d.bullets?.length && !d.image) { // MODAL ONLY
           const label = `Open content: ${d.title}`;
           return `<li class="deep-item"><button type="button" class="profile-btn" aria-label="${label}" onclick="openProfile(${sectionIdx},${di})">${d.title}</button></li>`;
       }
@@ -1089,7 +1085,6 @@ function startApp() {
       
       let fullContentHTML = '';
       if (d.image) {
-          // *** NEW LAYOUT & SMALLER IMAGES AS PER YOUR REQUEST ***
           fullContentHTML = `
             <div style="text-align: left;">
                 <div style="display: flex; flex-wrap: wrap; gap: 1.5rem; align-items: flex-start; margin-bottom: 1rem;">
