--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <style>
   :root{--bg:#0e0f12;--ink:#e8ebf0;--muted:#b6bdc9;--card:#161821;--line:#262a35;--brand:#59d0ff;--accent:#ffd166}
   html,body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.6 'Segoe UI',system-ui,Roboto,sans-serif}
+  a {color: var(--accent);}
   body.modal-open{overflow:hidden}
   /* Hide main content until the app is ready */
   header.top, #main-content, #qna-fab {display: none;}
